[package]
name = "deliberate-thinking-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.6.4", features = ["server", "transport-io"] }
rmcp-macros = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "deliberate-thinking-server"
path = "src/main.rs"