[package]
name = "deliberate-thinking-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kljensen/deliberate-thinking"
license = "MIT"
description = "MCP server for deliberate thinking"

[dependencies]
rmcp = { version = "0.6.4", features = ["server", "transport-io"] }
rmcp-macros = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "deliberate-thinking-server"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
